Upgrade Spring Boot to 2.7.18 and Java to 21, migrate Swagger to Springdoc OpenAPI